# SkyRoom

./: CMakeLists.txt  CMakeSettings.json  main.cpp
application/: main.cpp
builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libskyroom.vcxproj  libskyroom.vcxproj.filters  skyroom.sln  skyroom.vcxproj  skyroom.vcxproj.filters
builds/libs/libskyroom/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  libskyroom.sln
libs/libskyroom/: CMakeLists.txt  libskyroom.cpp  skyroom.h  skyroom_global.h  skyroom_platforms.h  skyroom_sexagesimal.h
libs/libskyroom/headers/: skyroom.h  skyroom_platforms.h  skyroom_sexagesimal.h
libs/libskyroom/include/: libskyroom.h
libs/libskyroom/src/: skyroom.cpp  skyroom_sexagesimal.cpp
